--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Billy Rhoades (12352623) <bjrq48@mst.edu>
 Evolutionary Computation
-Class: CS348 Assignment 2b
+Class: CS348 Assignment 2c
 
 This program has been throughly tested on Linux on both Python 3.2 and Python 3.3.
 
